Bug 263068 - KTorrent 4.0.5: module tab may be open with an unselected button
Summary: KTorrent 4.0.5: module tab may be open with an unselected button
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 267012 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-13 21:16 UTC by Martin Walch
Modified: 2011-02-28 19:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Walch 2011-01-13 21:16:59 UTC
Version:           unspecified (using KDE 4.5.5) 
OS:                Linux

At the bottom of the Torrents view in the main window are some tabs of which one at a time may be opened or all be closed. Opening a tab is done by clicking on the respective "tab button". This also switches the button into a "selected" state. Closing is done by clicking on the button that is in the selected state.

Under certain circumstances, it can happen that a tab is opened, but its corresponding button is *not* in the selected state.

Reproducible: Always

Steps to Reproduce:
- for simplicity first deactivate all modules
- now activate the UPnP module
- open the Torrent view
- open the UPnP tab by clicking on its button. Now it is open and the button is in the "selected" state.
- switch to the modules view and unload the UPnP module
- switch back to the Torrents view

Actual Results:  
You can now see that the UPnP tab has disappeared and a different tab is open. However, the one that is open has its corresponding button *not* in the "selected" state. Also, when now clicking on the button, the tab stays visible and the button switches its state. A second click is necessary to close the tab.

Expected Results:  
The behaviour is mostly as expected, but the button of the newly opened tab should have the right state, so it is consistent and can be closed with one click.
Comment 1 Joris Guisson 2011-01-22 13:01:43 UTC
Git commit 56f26c74e9f4a31b3a65b3b0d537c42ba9a76d68 by Joris
Pushed by guisson into branch master

Fix tab bar not matching TabBarWidget state in some circumstances

BUG: 263068

M  +1    -0    ChangeLog     
M  +11   -1    libktcore/gui/tabbarwidget.cpp     

http://commits.kde.org/e79f3103/56f26c74e9f4a31b3a65b3b0d537c42ba9a76d68
Comment 2 Joris Guisson 2011-01-22 13:02:39 UTC
Git commit c90a8eeb92c1c5d3f71fc6da8a2f7b3e371354e3 by Joris
Pushed by guisson into branch 4.1

Backport to 4.1: Fix tab bar not matching TabBarWidget state in some circumstances

CCBUG: 263068

M  +1    -0    ChangeLog     
M  +11   -1    libktcore/gui/tabbarwidget.cpp     

http://commits.kde.org/e79f3103/c90a8eeb92c1c5d3f71fc6da8a2f7b3e371354e3
Comment 3 Joris Guisson 2011-02-28 19:51:06 UTC
*** Bug 267012 has been marked as a duplicate of this bug. ***