Fix tab bar not matching TabBarWidget state in some circumstances

BUG: 263068